--- a/index.html
+++ b/index.html
@@ -9,7 +9,26 @@
     <title>jeuxJs</title>
   </head>
   <body>
-    <table id="map" border="1"></table>
+    <div class="flex-container">
+      <table id="map" border="1"></table>
+      <div class="card">
+        <div class="container-information">
+          <h3>Nom :</h3>
+          <p>Mon arme :</p>
+          <p>Point de vie :</p>
+          <p>Point d'attaque :</p>
+          <p>Vitesse :</p>
+        </div>
+        <div class="container-information">
+          <h3>Nom :</h3>
+          <p>Mon arme :</p>
+          <p>Point de vie :</p>
+          <p>Point d'attaque :</p>
+          <p>Vitesse :</p>
+        </div>
+      </div>
+    </div>
+    <script src="js/function.js"></script>
     <script src="js/map.js"></script>
     <script src="js/player.js"></script>
     <script src="js/weapon.js"></script>
