--- a/index.html
+++ b/index.html
@@ -13,18 +13,24 @@
       <table id="map" border="1"></table>
       <div class="card">
         <div class="container-information">
-          <h3>Nom :</h3>
-          <p>Mon arme :</p>
-          <p>Point de vie :</p>
-          <p>Point d'attaque :</p>
-          <p>Vitesse :</p>
+          <h3>Player 1</h3>
+          <p>Mon arme :<span id="arme-p1"></span></p>
+          <p>Point de vie :<span id="pv-p1"></span></p>
+          <p>Point d'attaque : <span id="pa-p1"></span></p>
+          <p>
+            <button id="attaque-p1">Attaque</button> -
+            <button id="defense-p1">Defense</button>
+          </p>
         </div>
         <div class="container-information">
-          <h3>Nom :</h3>
-          <p>Mon arme :</p>
-          <p>Point de vie :</p>
-          <p>Point d'attaque :</p>
-          <p>Vitesse :</p>
+          <h3>Player 2</h3>
+          <p>Mon arme :<span id="arme-p2"></span></p>
+          <p>Point de vie :<span id="pv-p2"></span></p>
+          <p>Point d'attaque :<span id="pa-p2"></span></p>
+          <p>
+            <button id="attaque-p2">Attaque</button> -
+            <button id="defense-p2">Defense</button>
+          </p>
         </div>
       </div>
     </div>
